<?xml version="1.0" encoding="utf-8"?>


<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="Hello_message">Hello World!</string>
    <string name="ButtonText">Button</string>
    <string name="MyWidgets">Here are my widgets:</string>
    <string name="CheckThis">Check this out!</string>
    <string name="MySwitch">Switch on / off</string>
    <string name="MyType">Type your answer in here</string>


    <!--** activityFirst **-->

    <string name="emailTitle">Enter your email address:</string>
    <string name="textEmailAddress">Type email here</string>
    <string name="textPassword">Type your password:</string>
    <string name="Login">Login:</string>

    <!--** profileActivity **-->
    <string name="profileText">Your profile:</string>
    <string name="yourName">Your name:</string>
    <string name="EnterName">Enter your name</string>
    <string name="yourEmail">Your email:</string>
    <string name="enterEmail">Enter your email</string>
    <string name="youPicture">Your picture:</string>
    <string name="clickPicture">Click the  button above to take a picture</string>


    <!--** lab4 **-->


    <string name="sendMsg">Send</string>
    <string name="recMsg">Recieve</string>
    <string name="chatBar">Type Here</string>
    <string name="enterChat">Go To Chat</string>


    <!--** lab6 **-->
    <string name="toolBar">Go To Tool Bar Page</string>


</resources>