<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:text="@string/MyWidgets"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"

        android:layout_columnWeight="1"
        android:text="@string/ButtonText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"

        app:srcCompat="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:text="@string/CheckThis" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:text="@string/MySwitch" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/MyType" />


</GridLayout>