<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"

    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/MyWidgets"
        android:textSize="30dp"/>


    <View android:id="@+id/strut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"/>



    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/strut"

        android:text="@string/ButtonText" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/strut"
        app:srcCompat="@drawable/flag" />





    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/CheckThis"
        android:layout_below="@+id/imageButton3"
        android:layout_toLeftOf="@id/strut"
        android:layout_alignParentLeft="true"


        />


    <Switch
        android:id="@+id/switch4"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_below="@+id/imageButton3"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/strut"
        android:text="@string/MySwitch"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/MyType"
        android:layout_below="@+id/switch4"
        />


</RelativeLayout>